# SDUCS-experiment-homework-reference-answer

./: .gitignore  update.sh
!本科归档/大一上学期/新生研讨作业/: 202300130183宋浩宇.doc  研讨课报告模板V2022.docx
!本科归档/大一上学期/近现代史纲要作业/: 宋浩宇近现代史纲要作业.docx
!本科归档/大一下学期/: 团队社会实践报告.doc  宋浩宇大一社会实践报告.doc  宋浩宇大一社会实践白皮书.doc
!本科归档/大一下学期/“四史”作业/: 计算机科学与技术学院23级人工智能宋浩宇202300130183.docx
!本科归档/大一下学期/人工智能导论作业/: Python教程.docx  实验报告模板.docx
!本科归档/大一下学期/人工智能法/: 202300130183 SONG haoyu Assignment 1 .docx
!本科归档/大一下学期/分布式计算作业/: 分布式计算第1次作业_宋浩宇_202300130183.doc  分布式计算第1次作业及注意事项.docx  分布式计算第2次作业_宋浩宇_202300130183.docx  分布式计算第3次作业_宋浩宇_202300130183.docx  分布式计算第4次作业_宋浩宇_202300130183.docx
!本科归档/大一下学期/大数据分析导论作业/: 202300130183宋浩宇大数据分析导论结课报告.docx  大数据分析实验指导书.docx
!本科归档/大一下学期/机器学习/: 202300130183Haoyu Song.docx  ASSESSMENT zh.docx  ASSESSMENT.docx
!本科归档/大一下学期/考古学与世界文明史作业/: 202300130183宋浩宇.docx
!本科归档/大一下学期/高级语言程序设计作业/: 实验报告模板.doc
!本科归档/大二上学期/人权法作业/: 202300130183-宋浩宇-关于死刑存废问题的思考.docx
!本科归档/大二上学期/儒学与生活作业/: ~$期末试题.docx
!本科归档/大二上学期/科技英语文献阅读与翻译作业/: 展示稿.docx
!本科归档/大二上学期/计算机组成与设计作业/: .gitignore  202300130183_宋浩宇_实验n无选做实验.docx  202300130183_宋浩宇_实验n有选做实验.docx  《计算机组成与设计》课程实验教学大纲.docx  计算机组成原理实验指导书 - 新实验台.docx
!本科归档/大二上学期/认知实习作业/: 202300130183宋浩宇.docx  结课论文要求.md
操作系统作业/作业/Week1/: 操作系统Week1宋浩宇202300130183智能班.docx
操作系统作业/作业/Week3/: hw3.c
操作系统作业/实验/: ~$系统实验_智能班_实验x_报告_宋浩宇_202300130183.doc  操作系统实验_智能班_实验x_报告_宋浩宇_202300130183.doc
操作系统作业/实验/实验1/: Makefile(for_pctl)  Makefile(for_sfex)  pctl.c  pctl.h  sfex.c  操作系统实验_智能班_实验1_报告_宋浩宇_202300130183.doc
操作系统作业/实验/实验2/: Makefile(for ppipe)  Makefile(for sfex)  Makefile(for tpipe)  ppipe.c  sfex.c  tpipe.c  操作系统实验_智能班_实验2_报告_宋浩宇_202300130183.doc
操作系统作业/实验/实验3/: myShell.c  操作系统实验_智能班_实验3_报告_宋浩宇_202300130183.doc
操作系统作业/实验/实验4/: .gitignore  操作系统实验_智能班_实验4_报告_宋浩宇_202300130183.doc
操作系统作业/实验/实验5/: 操作系统实验_智能班_实验5_报告_宋浩宇_202300130183.doc
机器学习作业/大作业/数据集/: track3_data_20210228.md  track3_data_20210408.md  track3_round2_data_20210415.md
机器学习作业/实验/: 202300130183-宋浩宇-实验报告x.docx  ~$2300130183-宋浩宇-实验报告x.docx
机器学习作业/实验/实验1/: 202300130183-宋浩宇-实验报告1.docx  TwoDLinearRegression.m
机器学习作业/实验/实验10/: 202300130183-宋浩宇-实验报告10.docx  RandomForest.py
机器学习作业/实验/实验2/: 202300130183-宋浩宇-实验报告2.docx  MultivariateLinearRegression.m
机器学习作业/实验/实验3/: 202300130183-宋浩宇-实验报告3.docx  LinearDiscriminantAnalysis.m
机器学习作业/实验/实验4/: 202300130183-宋浩宇-实验报告4.docx  LogisticRegressionAndNewtonMethod.m
机器学习作业/实验/实验5/: 202300130183-宋浩宇-实验报告5.docx  LinearRegularization.m  LogisticRegularization.m
机器学习作业/实验/实验7/: DecisionTree.py
机器学习作业/实验/实验9/: 202300130183-宋浩宇-实验报告9.docx  DecisionTree.py
程序设计思维与实践作业/作业/Month1/: 主观题1.md  主观题2.md  主观题3.md  主观题4.md  编程题1-飞飞的赌神修炼手册.cpp  编程题2-坏键监测.cpp  编程题3-R!!G!!B!!.cpp  编程题4-TT的袜子.cpp  编程题5-地牢游戏.cpp  编程题6-小H爱数学.cpp  编程题6-小H爱数学.py  编程题7-五一快乐.cpp
程序设计思维与实践作业/作业/Month2/: 编程题1-TT与可怜的猫.cpp  编程题2-时间复杂度.cpp  编程题3-寻找高点.cpp  编程题4-晨晨的苹果.cpp  (+3 more)
自主智能系统与机器人作业/ros/: README.md  ros_install.sh  命令对应关系.md
自主智能系统与机器人作业/ros/catkin_ws/src/learning_service/: CMakeLists.txt  package.xml
自主智能系统与机器人作业/ros/catkin_ws/src/learning_service/src/: person_client.cpp  person_server.cpp  turtle_command_server.cpp  turtle_spawn.cpp
自主智能系统与机器人作业/ros/catkin_ws/src/learning_service/srv/: Person.srv
自主智能系统与机器人作业/ros/catkin_ws/src/learning_topic/: CMakeLists.txt  package.xml
自主智能系统与机器人作业/ros/catkin_ws/src/learning_topic/msg/: Person.msg
自主智能系统与机器人作业/ros/catkin_ws/src/learning_topic/src/: person_publisher.cpp  person_subscriber.cpp  pose_subscriber.cpp  velocity_publisher.cpp
自主智能系统与机器人作业/第三章/: T1_P34_2_6.m  T2_P36_2_7.m  T3_P38_2_9.m  T4_P40_2_11.m
自主智能系统与机器人作业/第五章/: T1_EXP32_Q.m
自主智能系统与机器人作业/第六章/: T1_EXP37_demo_1.m  T2_EXP42_demo_2.m
自主智能系统与机器人作业/第四章/: T1_P81_2_33.m
英语演讲与辩论作业/: 48宋浩宇.docx  周三上午第一节48宋浩宇.docx  终稿-课前演讲My Dream Only EN.docx  终稿-课前演讲My Dream.docx
计算机图形学作业/: 智能23_202300130183_宋浩宇_计算机图形学实验x.docx
计算机图形学作业/实验0/: 智能23_202300130183_宋浩宇_计算机图形学实验0.docx
计算机图形学作业/实验1/: main.cpp  pa1.txt  智能23_202300130183_宋浩宇_计算机图形学实验1.docx
计算机图形学作业/实验2/: 智能23_202300130183_宋浩宇_计算机图形学实验2.docx
计算机图形学作业/实验3/: main.cpp  智能23_202300130183_宋浩宇_计算机图形学实验3.docx
计算机图形学作业/实验4/: 智能23_202300130183_宋浩宇_计算机图形学实验4.docx
计算机图形学作业/实验5/: CMakeLists.txt  liang-berskey-line-clipping.cpp  智能23_202300130183_宋浩宇_计算机图形学实验5.docx
计算机图形学作业/实验5/代码框架/: main.cpp  rasterizer.cpp  rasterizer.hpp
计算机图形学作业/实验6/: 智能23_202300130183_宋浩宇_计算机图形学实验6.docx
计算机图形学作业/论文汇报/: .gitignore  开题报告.docx
计算机网络作业/: 绕过https重定向的POST脚本.py
计算机网络作业/实验1/: 202300130183-宋浩宇-实验一.doc
计算机网络作业/实验10/: 202300130183-宋浩宇-实验十.doc
计算机网络作业/实验11/: 202300130183-宋浩宇-实验11.doc  202300130183-宋浩宇-实验十一.doc
计算机网络作业/实验12/: 202300130183-宋浩宇-实验x.doc  202300130183-宋浩宇-实验十二.doc
计算机网络作业/实验2/: 202300130183-宋浩宇-实验二.doc
计算机网络作业/实验3/: 202300130183-宋浩宇-实验三.doc
计算机网络作业/实验4/: 202300130183-宋浩宇-实验四.doc
计算机网络作业/实验5/: 202300130183-宋浩宇-实验五.doc
计算机网络作业/实验6/: 202300130183-宋浩宇-实验六.doc
计算机网络作业/实验7/: 202300130183-宋浩宇-实验七.doc
计算机网络作业/实验8/: 202300130183-宋浩宇-实验八.doc
计算机网络作业/实验9/: 202300130183-宋浩宇-实验九.doc
马克思主义原理作业/: 202300130183_宋浩宇_马克思主义基本原理实践作业.docx  2025春季学期《马克思主义基本原理》实践教学方案.docx  习近平在纪念马克思诞辰200周年大会上的讲话.doc  第一次作业.docx  第三次作业.docx  第二次作业.docx  第五次作业.docx  第六次作业.docx  第四次作业.docx
(+3323 files in other folders)
